# Vremenar-Utils

./: .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  sonar-project.properties
.github/workflows/: CI.yml  codeql-analysis.yml
micros/dwd_stations/: main.py  requirements.txt
src/vremenar_utils/: __init__.py
src/vremenar_utils/arso/: __init__.py  database.py  maps.py  parser.py  stations.py  weather.py
src/vremenar_utils/cli/: __init__.py  common.py  config.py  crontab.py  logging.py
src/vremenar_utils/data/meteoalarm/: de.json  de_stations.json  germany_overrides.json  si.json  si_overrides.json  si_stations.json  slovenia.json
src/vremenar_utils/data/shapes/: Germany.json
src/vremenar_utils/data/stations/: ARSO.id.csv  DWD.csv  DWD.current.csv  DWD.ignore.csv  DWD.include.csv
src/vremenar_utils/database/: __init__.py  redis.py  stations.py  utils.py
src/vremenar_utils/dwd/: __init__.py  current.py  database.py  forecast.py  mosmix.py  parsers.py  stations.py  units.py
src/vremenar_utils/geo/: __init__.py  polygons.py  shapes.py
src/vremenar_utils/meteoalarm/: __init__.py  areas.py  common.py  database.py  notifications.py  parser.py  steering.py
src/vremenar_utils/notifications/: __init__.py
tests/: conftest.py  test_main.py
tests/arso/: test_arso_maps.py  test_arso_stations.py
tests/base/: test_main.py
tests/dwd/: test_dwd_current.py  test_dwd_mosmix.py  test_dwd_stations.py  test_mosmix.py  test_stations.py
tests/meteoalarm/: test_meteoalarm.py
tests/notifications/: test_notifications.py
tests/source_arso/: test_arso_maps.py  test_arso_stations.py  test_arso_weather.py
tests/source_dwd/: test_dwd_current.py  test_dwd_mosmix.py  test_dwd_stations.py  test_dwd_units.py
tests/source_meteoalarm/: test_meteoalarm.py
