[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "vremenar_utils"
description = ""
version = "0.4.0"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "Tadej Novak", email = "tadej@tano.si" }]
requires-python = ">= 3.11, < 3.13"
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "Babel >= 2.13",
  "firebase-admin == 6.2.*",
  "geopandas == 0.14.*",
  "httpx == 0.25.*",
  "lxml",
  "parsel",
  "python-crontab == 3.0.*",
  "pyyaml",
  "redis[hiredis] == 5.0.*",
  "rich == 13.7.*",
  "Shapely",
  "typer[all] == 0.9.*",
  "wheel",
  "xmltodict",
]

[project.optional-dependencies]
dev = [
  "coverage[toml]",
  "gevent",
  "mypy == 1.7.*",
  "pre-commit",
  "pre-commit-hooks == 4.5.*",
  "pytest >= 7.0",
  "pytest-cov",
  "pytest-forked",
  "ruff ==0.1.14",
  "types-python-crontab",
  "types-python-dateutil",
  "types-pyyaml",
  "types-redis",
]

[project.scripts]
vremenar_utils = "vremenar_utils.cli:application"

[tool.pdm.scripts]
test = "pytest -W error"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
skip-string-normalization = true
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.venv
)/
'''

[tool.coverage.run]
branch = true
source = ["src/vremenar_utils"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if self.debug:",
  "if debug:",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "__repr__",
]
ignore_errors = true
omit = ["src/vremenar_utils/tests/*", "tests/*"]

[tool.ruff]
target-version = "py311"
select = [
  "F",     # pyflakes
  "E",     # pycodestyle
  "W",     # pycodestyle
  "C90",   # mccabe (complexity)
  "I",     # isort
  "N",     # pep8-naming
  "D",     # pydocstyle
  "UP",    # pyupgrade
  "YTT",   # flake8-2020
  "ANN",   # flake8-annotations
  "ASYNC", # flake8-async
  "FBT",   # flake8-boolean-trap
  "B",     # flake8-bugbear
  "A",     # flake8-builtins
  "COM",   # flake8-commas
  "C4",    # flake8-comprehensions
  "DTZ",   # flake8-datetimez
  "EM",    # flake8-errmsg
  "EXE",   # flake8-executable
  "ISC",   # flake8-implicit-str-concat
  "G",     # flake8-logging-format
  "PIE",   # flake8-pie
  "T20",   # flake8-print
  "PT",    # flake8-pytest-style
  "Q",     # flake8-quotes
  "RET",   # flake8-return
  "SLF",   # flake8-self
  "SIM",   # flake8-simplify
  "TID",   # flake8-tidy-imports
  "TCH",   # flake8-type-checking
  "INT",   # flake8-gettext
  "ARG",   # flake8-unused-arguments
  "PTH",   # flake8-use-pathlib
  "PL",    # pylint
  "TRY",   # tryceratops
  "FLY",   # flynt
  "PERF",  # perflint
  "RUF",   # ruff
]
ignore = [
  "ANN102",  # missing-type-cls (not working for the moment)
  "PLR2004", # magic-value-comparison (not wanted)
  "D203",    # one-blank-line-before-class (conflicting with no-blank-line-before-class)
  "D213",    # multi-line-summary-second-line (conflicting with multi-line-summary-first-line)
  "FBT001",  # boolean-positional-arg-in-function-definition (not wanted)
  "FBT002",  # boolean-default-value-in-function-definition (not wanted)
]
line-length = 88

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
disallow_untyped_globals = true
no_implicit_reexport = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict_concatenate = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--ignore=src/vremenar/tests/ --cov=vremenar_utils --cov-config=.coveragerc --cov-report=term-missing:skip-covered --cov-report xml --cov-report html:coverage"
testpaths = ["tests"]
