[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vremenar_utils"
description = ""
dynamic = ["version"]
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "Tadej Novak", email = "tadej@tano.si" }]
requires-python = ">= 3.11"
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "Babel >= 2.13",
  "firebase-admin == 6.9.*",
  "geopandas == 1.1.*",
  "httpx == 0.28.*",
  "lxml",
  "parsel",
  "python-crontab == 3.2.*",
  "pyyaml",
  "redis[hiredis] == 6.2.*",
  "rich ==14.2.*",
  "Shapely",
  "typer-slim[standard] == 0.16.*",
  "wheel",
  "xmltodict",
]

[dependency-groups]
dev = [
  "coverage[toml]",
  "gevent",
  "mypy == 1.16.0",
  "pre-commit",
  "pre-commit-hooks == 5.0.*",
  "pytest >= 8.0",
  "pytest-cov",
  "pytest-forked",
  "ruff == 0.11.13",
  "types-python-crontab",
  "types-python-dateutil",
  "types-pyyaml",
  "types-redis",
]

[project.scripts]
vremenar_utils = "vremenar_utils.cli:application"

[tool.hatch.version]
path = "src/vremenar_utils/__init__.py"

[tool.coverage.run]
branch = true
source = ["src/vremenar_utils"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "if self.debug:",
  "if debug:",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "__repr__",
]
ignore_errors = true
omit = ["src/vremenar_utils/tests/*", "tests/*"]

[tool.ruff]
src = ["src"]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = [
  "YTT",   # flake8-2020
  "ANN",   # flake8-annotations
  "ASYNC", # flake8-async
  "S",     # flakey-bandit
  "BLE",   # flake8-blind-except
  "FBT",   # flake8-boolean-trap
  "B",     # flake8-bugbear
  "A",     # flake8-builtins
  "COM",   # flake8-commas
  "C4",    # flake8-comprehensions
  "DTZ",   # flake8-datetimez
  "EM",    # flake8-errmsg
  "EXE",   # flake8-executable
  "FA",    # flake8-future-annotations
  "ISC",   # flake8-implicit-str-concat
  "ICN",   # flake8-import-conventions
  "LOG",   # flake8-logging
  "G",     # flake8-logging-format
  "PIE",   # flake8-pie
  "T20",   # flake8-print
  "PT",    # flake8-pytest-style
  "Q",     # flake8-quotes
  "RSE",   # flake8-raise
  "RET",   # flake8-return
  "SLF",   # flake8-self
  "SIM",   # flake8-simplify
  "TID",   # flake8-tidy-imports
  "TC",    # flake8-type-checking
  "ARG",   # flake8-unused-arguments
  "PTH",   # flake8-use-pathlib
  "FLY",   # flynt
  "I",     # isort
  "C90",   # mccabe (complexity)
  "NPY",   # numpy
  "PD",    # pandas-vet
  "N",     # pep8-naming
  "PERF",  # perflint
  "E",     # pycodestyle
  "W",     # pycodestyle
  "DOC",   # pydoclint
  "D",     # pydocstyle
  "F",     # pyflakes
  "PGH",   # pygrep-hooks
  "PL",    # pylint
  "UP",    # pyupgrade
  "FURB",  # refurb
  "RUF",   # ruff
  "TRY",   # tryceratops
]
ignore = [
  "PLR2004", # magic-value-comparison (not wanted)
  "D203",    # one-blank-line-before-class (conflicting with no-blank-line-before-class)
  "D213",    # multi-line-summary-second-line (conflicting with multi-line-summary-first-line)
  "FBT001",  # boolean-positional-arg-in-function-definition (not wanted)
  "FBT002",  # boolean-default-value-in-function-definition (not wanted)
]

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = ["S101", "T201"]

[tool.mypy]
strict = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
warn_unreachable = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=vremenar_utils --cov-config=.coveragerc --cov-report=term-missing:skip-covered --cov-report xml --cov-report html:coverage --junitxml=junit.xml -o junit_family=legacy"
testpaths = ["tests"]
